[workspace]
package.edition = "2021"
resolver = "2"
members = [
    "rustyhack_client",
    "rustyhack_lib",
    "rustyhack_server",
]

[profile.release]
lto = true

[workspace.dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
console_engine = "2.6.1"
crossbeam-channel = "0.5.13"
crossterm = { version = "0.26.1", features = ["serde"] }
laminar = "0.5.0"
legion = "0.4.0"
log = "0.4.22"
message-io = { version = "0.18.2", default-features = false, features = ["tcp"] }
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simplelog = "0.12.2"
strum_macros = "0.26.4"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
