[workspace]
package.edition = "2024"
resolver = "2"
members = [
    "rustyhack_client",
    "rustyhack_lib",
    "rustyhack_server",
]

[profile.release]
lto = true

[workspace.dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.40"
console_engine = "2.6.1"
crossbeam-channel = "0.5.15"
crossterm = { version = "0.26.1", features = ["serde"] }
laminar = "0.5.0"
legion = "0.4.0"
log = "0.4.26"
message-io = { version = "0.18.3", default-features = false, features = ["tcp"] }
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
strum_macros = "0.27.1"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
