[package]
name = "rustyhack_server"
version = "0.2.1"
authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/pbellchambers/rustyhack-mmo"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyhack_lib = { path = "../rustyhack_lib" }
log = "0.4.17"
simplelog = "0.12.0"
console_engine = "2.4.0"
crossterm = { version = "0.23.2", features = ["serde"] }
legion = "0.4.0"
laminar = "0.5.0"
crossbeam-channel = "0.5.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
bincode = "1.3.3"
rand = "0.8.5"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
