[package]
name = "rustyhack_server"
version = "0.3.2"
authors = ["pbellchambers <pbellchambers@users.noreply.github.com>"]
edition.workspace = true
homepage = "https://github.com/pbellchambers/rustyhack-mmo"
repository = "https://github.com/pbellchambers/rustyhack-mmo"
license = "AGPL-3.0"
readme = "../README.md"
description = "Server for Rustyhack MMO - An ASCII \"roguelike\" MMORPG"
keywords = ["game", "games", "roguelike", "mmorpg", "ascii-art", "ascii-game", "console-game", "terminal-game", "terminal-based", "server"]
categories = ["games"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyhack_lib = { path = "../rustyhack_lib" }
log.workspace = true
simplelog.workspace = true
crossterm.workspace = true
legion.workspace = true
laminar.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
rand.workspace = true
uuid.workspace = true
rayon.workspace = true
ndarray.workspace = true
message-io.workspace = true